# SoapySDR

./: .travis.yml  CMakeLists.txt
.github/workflows/: ci.yml
cmake/Modules/: FindLuaJIT.cmake  SWIGCSharp.cmake  UseCSharp.cmake
csharp/: ArgInfo.cs  ArgValue.cs  AssemblyInfo.cs  CMakeLists.txt  CSharpExtensions.hpp  Device.cs  Device.i  DeviceWrapper.hpp  Logger.cs  Logger.i  RxStream.cs  SWIGCSharp.cmake  SoapyConvertible.cs  SoapySDR.i  Stream.cs  Stream.i  TxStream.cs  Utility.cs
csharp/assembly/: AssemblyInfo.cs  CMakeLists.txt  Logger.cs  Range.cs  RxStream.cs  SoapyConvertible.cs  Stream.cs  TxStream.cs  Utility.cs
csharp/swig/: CMakeLists.txt  DeviceWrapper.hpp
csharp/tests/: CMakeLists.txt  TestBuildInfo.cs  TestDeviceAPI.cs  TestEnumerateDevices.cs  TestGenericStreamingAPI.cs  TestLogger.cs  TestRunner.cs  TestSoapyTypes.cs  TestStreamingAPI.cs  TestTimeConversion.cs
docs/: CMakeLists.txt
docs/ldoc/: CMakeLists.txt  config.ld  config.ld.in
include/SoapySDR/: Device.h
lib/: TypeHelpers.hpp
luajit/: CMakeLists.txt  Class.lua  Complex.lua  Device.lua  Lib.lua  Logger.lua  MetaTables.lua  Time.lua  Utility.lua  init.in.lua  init.lua
luajit/apps/: SimpleSiggen.lua
luajit/tests/: CMakeLists.txt  TestConvertTypes.lua  TestDeviceAPI.lua  TestEnumerateDevices.lua  TestErrorCodes.lua  TestFormats.lua  TestLogger.lua  TestTimeConversion.lua
